hphp/test/zend/bad/ext/reflection/tests/ReflectionClass_isSubclassOf_error1.php
<?php
class A {}
$rc = new ReflectionClass('A');

var_dump($rc->isSubclassOf('X'));

?>
